--- a/_drafts/README
+++ b/_drafts/README
@@ -1,1 +1,5 @@
 This is directory post file. i've one sample for u.
+
+#update 14 Aug 2011
+
+i've tarball for post content. extract it into _post dir. and run jekyll, enjoy it .. ;)
